--- a/mini_project1.Rmd
+++ b/mini_project1.Rmd
@@ -9,18 +9,19 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## Front Matter Including Part 1
-```{r}
+## Front Matter Including Task 1
+```{r warnings = FALSE, message = FALSE}
 # Load necessary libraries
-library(dplyr)
+library(tidyverse)
 library(ggplot2)
+library(lubridate)
 
 #Part 1
 library(readxl)
 CODGames2_mp <- read_excel("data/CODGames2_mp.xlsx")
 ```
 
-## Part 2
+## Task 2
 
 Explore 6 variables (at least 1 categorical and 1 quantitative). <br>
 
@@ -156,7 +157,56 @@ ggplot(CODGames2_mp, aes(Choice)) +
   labs(title = "Distribution of Choices", xlab = "Choices")
 ```
 
-## Part 3
+## Task 3
+
+All of our questions are regarding what the variables mean. Here they are: <br><br>
+<ul>
+  <li>What aspects of the game play into the variable Score? How can one score high? How does it differ from                  TotalXP?</li>
+  <li>What would cause the variable "Choice" - which is the choice of map in which the game is played - to have an NA         value?</li>
+  <li>What is the relationship between Map1, Map2, Choice, and MapVote?</li>
+  <li>What does the ratio mean in the variable MapVote?</li>
+  <li>What are the different GameTypes?</li>
+  <li>What does the Results table represent and does the meaning change among game types?</li>
+</ul>
+
+## Task 4
+
+### Part 1
+
+Is the player’s performance, as quantified by the amount of experience points gained (TotalXP variable) changing over time?
+
+```{r}
+# Create a new table with TotalXP, Date, and then year, month, day derived from Date
+# the lubridate package is loaded in with tidyverse
+
+xp <- CODGames2_mp %>% 
+  select("Date", "TotalXP") %>% 
+  mutate(year = year(CODGames2_mp$Date), 
+         month = month.name[month(CODGames2_mp$Date)],
+         day = day(CODGames2_mp$Date)
+         )
+
+# Use fct_inorder to order boxplots by month
+ggplot(data = xp, mapping = aes( x = fct_inorder(month), y = TotalXP)) +
+  geom_boxplot() +
+  labs(title = "TotalXP Earning by Month", 
+       x = "Month",
+       y = "TotalXP Earned")
+
+
+
+```
+<br> *Assessment:* <br><br>
+
+It does not appear that there is any improvement whatsoever across the three months in which the user played the game. In fact, the median value of XP earned in a day during a given month is less in both July and August as compared to June. Arguably, the user's performance worsened.<br><br>
+
+However, there are numerous variables at play here. Game play could have affected the TotalXP value. Additionally, the user might decide that, once his performance with a particular weapon reaches a certain level, he wants to use a different weapon. So, while he apparently is not earning more XP over time, that does not necessarily mean that he is becoming worse at the game.<br><br>
+
+The one final note is that the user might not have played as much from month to month. Such variability in game play would also affect our assessment.<br><br>
+
+### Part 2
+
 question I was thinking we could ask: which primary weapon (or choice, but choice has NA values) resulted in the most deaths/elimintaions/totalXp
 
-## Part 4
+
+What is the relationship between deaths and eliminations over time?
