Update lm model with variables Death and Elims

--- a/KovscekWagner_MP2.Rmd
+++ b/KovscekWagner_MP2.Rmd
@@ -356,20 +356,21 @@ ResultsTable
 ## Task 4
 Inference Question: 
 
-How does the player's performance affect the team's performance (margin which they win)?
+How does the team's outcome (W/L/T), the user's Deaths, and the user's Eliminations affect the user's TotalXP for a given a given game?
 
-Team's Performance using ResultsData
 ```{r}
 Results2 <- Results2 %>%
   mutate(GameResult = Results2$PlayersTeam - Results2$OtherTeam) %>%
   mutate(GameResult2 = case_when(GameResult > 0 ~ "win", GameResult < 0 ~ "lose", GameResult == 0 ~ "tie")) %>%
-  mutate(win = ifelse(GameResult2 == "win", 1, 0),
-         lose = ifelse(GameResult2 == "lose", 2, 0))
+  mutate(win = ifelse(GameResult2 == "win", 1, 0)
+  )
+         
 
-reg_res <- lm(TotalXP ~ win, data = Results2)
+reg_res <- lm(TotalXP ~ win + Eliminations + Deaths, data = Results2)
 summary(reg_res)
-reg_res <- lm(TotalXP ~ lose, data = Results2)
-summary(reg_res)
+
 ```
 
-I am testing an edit again.
+The formula for this model would be as follows:
+
+
