--- a/KovscekWagner_MP2.Rmd
+++ b/KovscekWagner_MP2.Rmd
@@ -373,4 +373,9 @@ summary(reg_res)
 
 The formula for this model would be as follows:
 
+The multiple linear regression model shows a positive slope of 1148.801 for wins, 497.579 for eliminations, and 4.511 for deaths. This means that when the player's team wins, we expect the player's TotalXP to increase by 1148.801 on average. When the player's eliminations increase by one, we expect the player's TotalXP to increase by 497.579 on average. Additionally, each time the player dies, we expect the player's TotalXP to increase by 4.511 on average. 
+
+## Discussion of Group Participation
+
+In this project, Nathanael and I did an even split of the work. He did questions 1 and 2 and I did questions 3 and 4. To do this effectively, we met at several points in the process to discuss not only this distribution of work, but also what inference question to ask for question 3 and what the best model would be to answer that question. We both found this distribution of work to be effective and would do something similar in the future. 
 
