--- a/KovscekWagner_MP3.Rmd
+++ b/KovscekWagner_MP3.Rmd
@@ -10,3 +10,15 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## Front Matter
+```{r warnings = FALSE, message = FALSE}
+remove(list = ls())
+# Load necessary libraries
+library(tidyverse)
+library(ggplot2)
+library(lubridate)
+
+#Part 1
+library(readxl)
+CODGames2_mp <- read_excel("data/CODGames2_mp.xlsx")
+```
+
